--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</div>
 			<div class="centerBorder"></div>
 			<div class="nav_links_centered">
-				<a href="#">Dupa</a>
+				<a href="#">HTML</a>
 				<a href="#">C++</a>
 				<a href="#">Algorytmy i Pseudokod</a>
 			</div>
