--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 	</head>
 	<body>
 		<header>
-			<h1>
+			<h1 class="slide-in-blurred-top">
 				Witryny i aplikacje internetowe | Notatki
 				<i class="fa-solid fa-book"></i>
 			</h1>
-			<span class="h_name">Adam Biliński Kl.1C</span>
+			<span class="h_name slide-in-right">Adam Biliński Kl.1C</span>
 		</header>
 		<nav class="navbar">
 			<div class="container nav-container">
@@ -42,17 +42,17 @@
 				<div class="hamburger_back"></div>
 				<div class="menu-items">
 					<ul>
-						<li><a href="#">Dział 1</a></li>
-						<li><a href="#">Dział 2</a></li>
-						<li><a href="#">Dział 3</a></li>
-						<li><a href="#">Dział 4</a></li>
+						<li><a href="#" class="tracking-in-expand">Dział 1</a></li>
+						<li><a href="#" class="tracking-in-expand">Dział 2</a></li>
+						<li><a href="#" class="tracking-in-expand">Dział 3</a></li>
+						<li><a href="#" class="tracking-in-expand">Dział 4</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 		<main>
 			<div class="main_m">
-				<section class="title_section">
+				<section class="title_section puff-in-center">
 					<h2>
 						Naucz się HTML <i class="fa-brands fa-html5"></i><br />Na witryny i
 						aplikacje internetowe
@@ -61,7 +61,7 @@
 					Z moimi notatakmi nauczysz się HTML od podstaw. <br />
 					Czytaj, rób przykłady i pisz.
 				</section>
-				<section>
+				<section class="puff-in-center">
 					<h3>
 						HTML czyli HyperText Markup Language (pol. hipertekstowy język
 						znaczników) <i class="fa-brands fa-html5"></i>
@@ -72,8 +72,7 @@
 					strukturę stron internetowych, a CSS określa formę jej prezentacji w
 					przeglądarce.
 				</section>
-				<section>
-					<i class="fa-solid fa-file-code file_icon"></i>
+				<section class="puff-in-center">
 					<h3>Co możemy zrobić w HTML?</h3>
 					<br />
 					O standardy pisania stron internetowych (a co za tym idzie o proces
@@ -85,7 +84,7 @@
 					Google Chrome) przy wykorzystaniu na stronie CSS (ang. Cascading Style
 					Sheets) czyli kaskadowych arkuszy stylów.
 				</section>
-				<section class="wcanbelearn">
+				<section class="wcanbelearn puff-in-center">
 					<h3>Naucz się:</h3>
 					<br />
 					<ul>
@@ -119,7 +118,7 @@
 						<li><a href="#">Mapy odsyłaczy</a></li>
 					</ul>
 				</section>
-				<section>
+				<section class="puff-in-center">
 					<img
 						class="img_macbook"
 						src="./images/pixabay_macbook"
